Fixed footer so it does not break the website on very small screens.

--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,14 @@ body {
 .footer-link-list {
     list-style: none;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    margin: 4rem auto;
+    margin: 3rem auto;
+}
+
+@media screen and (min-width: 768px) {
+    .footer-link-list {
+        flex-direction: row;
+    }
 }
